# pyBIA

./: README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
Figures/.ipynb_checkpoints/: Figure_5-checkpoint.ipynb
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_static/: documentation_options.js
docs/_templates/: layout.html
docs/source/: Conventions.rst  Engineering pyBIA.rst  Examples.rst  Figures.rst  Godines et al 2025.rst  Installation.rst  LoO_Confirmed_DIFFUSE_xgb  LoO_DIFFUSE_xgb  LoO_OTHER_xgb  Lyman-alpha Blobs.rst  Lyman-alpha Nebulae.rst  Machine Learning.rst  Science.rst  conf.py  confirmed_LAB_names.txt  confirmed_diffuse.npy  non_detections_Bw  nsig_scores_Bw  obj_name_781  training_set_objects.csv  xgb_output_images_names.txt
pyBIA/: catalog.py  cnn_model.py  data_augmentation.py  data_processing.py  ensemble_model.py  extract_objects.py  image_moments.py  models.py  optimization.py  outlier_detection.py  pyBIA.py  rf_model.py  rf_models.py  test.py
pyBIA/Figures/: Figure_2.ipynb
pyBIA/Figures/.ipynb_checkpoints/: Figures_3_4-checkpoint.ipynb
pyBIA/data/: training_set_objects.csv
