[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy",
    "tensorflow==2.16.1",
    "astropy==5.1",
    "scipy==1.10.0",
    "matplotlib==3.7.1",
    "photutils==1.5.0",
    "pandas==1.5.3",
    "scikit-learn==1.1.1",
    "scikit-optimize==0.9.0",
    "optuna==3.1.0",
    "boruta==0.3",
    "xgboost==1.6.2",
    "scikit-plot==0.3.7",
    "BorutaShap==1.0.16",
    "opencv-python==4.7.0.72",
    "imbalanced-learn==0.10.1"
]
build-backend = "setuptools.build_meta"
